# herodote

./: .gitignore  README.md
.github/workflows/: codeql-analysis.yml
herodote/: Dockerfile  app.js  docker-compose.yml  jobReceiver.js  package-lock.json  package.json  test.js
herodote/config/: custom-environment-variables.yaml  default.yml.template
herodote/lib/: auth_fake.js  auth_ldap.js  auth_oidc.js  keystone.js  rabbit.js  swift.js
herodote/lib/executor/: godocker.js  webhook.js
herodote/routes/: auth.js  config.js  home.js  jobs.js  projects.js  stats.js  users.js
herodote/test/: index.test.js
herodote/ui/herodote-ui/: README.md  angular.json  package-lock.json  package.json
herodote/ui/herodote-ui/e2e/src/: app.e2e-spec.ts
herodote/ui/herodote-ui/src/: index.html
herodote/ui/herodote-ui/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  config.service.ts
herodote/ui/herodote-ui/src/app/auth/: auth.guard.ts  auth.service.ts
herodote/ui/herodote-ui/src/app/faq/: faq.component.html  faq.component.ts
herodote/ui/herodote-ui/src/app/hook/: hook.component.css  hook.component.html  hook.component.ts
herodote/ui/herodote-ui/src/app/job/: job.component.html  job.component.ts  job.service.ts
my-herodote/: README.md  package-lock.json  package.json
swift-auth-middleware/: .gitignore
swift-auth-middleware/herodote-auth/: .gitignore  CHANGELOG  README.md  setup.cfg  test.py
swift-auth-middleware/herodote-auth/herodote_auth/: middleware.py
(+12 files in other folders)
