[metadata]
name = herodote_auth
summary = Auth middleware for swift and herodote
description-file =
    README.md
author = Olivier Sallou
author-email = olivier.sallou@irisa.fr
home-page = https://github.com/osallou/herodote
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
install_requires =
  PyJWT
  requests

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages =
    herodote_auth

[entry_points]
paste.filter_factory =
    herodote_auth = herodote_auth.middleware:filter_factory

